--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
     "ioredis": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
     "rate-limit-redis": "^4.2.0",
     "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
